fixed logo not showing up on in the docs on firefox

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -6,7 +6,7 @@
 
 /* Fix logo size */
 img.logo {
-  width: 100% !important;
+  width: 320px !important;
   height: 100% !important;
 }
 
